--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@ group = "io.github.dsheirer"
 version = "1.3.4"
 description = 'usb4Java library forked with support for Mac-OS versioning'
 
-//How to use.  I'm not even sure if these are the right steps or if there is an easier way
-//to do this.
-//1. publish
-//2. zipMavenCentralPortalPublication
-//3. releaseMavenCentralPortalPublication
+//How to use - Gradle Tasks:
+//1. clean     <-- important
+//2. build
+//3. publish
+//4. zipMavenCentralPortalPublication
+//5. releaseMavenCentralPortalPublication
 
 repositories {
     mavenCentral()
@@ -69,30 +70,3 @@ jar {
                 'Implementation-Version': archiveVersion
     }
 }
-
-
-//plugins {
-//    id("java")
-//}
-//
-//group = "io.github.dsheirer"
-//version = "1.3.2-SNAPSHOT"
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    implementation("org.junit.jupiter:junit-jupiter-api:6.0.1")
-//    implementation("org.junit.jupiter:junit-jupiter-engine:6.0.1")
-//    implementation("org.junit.jupiter:junit-jupiter-params:6.0.1")
-//    implementation("org.junit.vintage:junit-vintage-engine:6.0.1")
-//    implementation("org.apache.commons:commons-lang3:3.19.0")
-//    implementation("io.github.dsheirer:usb4java-native-libraries:1.3.1") //OSX & Windows aarch64 native libs
-//    implementation("org.usb4java:libusb4java:1.3.0")
-//    implementation("org.usb4java:usb4java-javax:1.3.0")}
-//
-//tasks.withType<Test>() {
-//    //Disable USB testing
-//    systemProperty("USB_TESTS", "false")
-//}
